data/derived/comb/progs/unify/prog2011.ml.out
Characters 96-97:
  List.fold_left f base fs;;
                 ^
Error: This expression has type
         (('a -> 'b) -> ('c -> 'a) -> 'c -> 'b) -> 'd -> bool
       but an expression was expected of type
         (('a -> 'b) -> ('c -> 'a) -> 'c -> 'b) ->
         'd -> ('a -> 'b) -> ('c -> 'a) -> 'c -> 'b
       Type bool is not compatible with type
         ('a -> 'b) -> ('c -> 'a) -> 'c -> 'b 
